--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,13 +8,13 @@ $backgroud: #2c3e50;	    //(44;62;80)
 */
 
 /* Color del tema */
-//$--color-primary: teal;
-$--color-primary:#115293;
+$--color-primary: teal;
+//$--color-primary:#115293;
 $--color-warning:#F57C00;
 $--color-danger:#9A0036;
 $--color-info:#1976D2;
 $--color-text-primary:#303030;
-$--color-text-regular:#303030;
+//$--color-text-regular:#303030;
 $--color-text-secondary:#424242;
 $--color-text-placeholder:#424242;
 $--border-color-base:#303030;
